--- a/examples/vanilla/index.html
+++ b/examples/vanilla/index.html
@@ -6,6 +6,7 @@
     <script src="../../dist/barcode-event.js"></script>
 </head>
 <body>
+    <h2>Try with your barcode scanner</h2>
     <p id="barcode-viewer"></p>
     <script>
         window.addEventListener(barcodeEvent.ON_BARCODE_SCANNED, e => {
